--- a/less/style.less
+++ b/less/style.less
@@ -163,6 +163,8 @@ address, p {line-height: 1.5;}
 		&:hover { background-color: transparent; border-color: transparent;}
 	}
 }
+.relative { position: relative; z-index: 1;}
+#loader { position: absolute; width: 100%; height: 100%; left: 0; top: 0; right: 0; bottom: 0; z-index: 9;}
 
 @media screen and (max-width:767px){
 	.head{
