--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,11 @@ p {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+.margin-auto {
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+}
 .padding-top {
   padding-top: 10px;
 }
